--- a/KBFinder/AndroidManifest.xml
+++ b/KBFinder/AndroidManifest.xml
@@ -6,6 +6,8 @@
 	<uses-sdk
 		android:minSdkVersion="16"
 		android:targetSdkVersion="19" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
 	<application
 		android:allowBackup="true"
 		android:icon="@drawable/ic_launcher"
