--- a/KBFinder/AndroidManifest.xml
+++ b/KBFinder/AndroidManifest.xml
@@ -25,7 +25,8 @@
 		<activity
             android:name=".SelectBtActivity"
             android:parentActivityName=".KBfinderActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+			android:screenOrientation="portrait" >
         </activity>
 		
 	</application>
